# rpi_camera_server

./: .camera_server.cpp.swp  .gitignore  CMakeLists.txt  README.MD  camera_server.cpp  index.html  mlg.html
css/: mlg.css  style.css
scripts/: photo.sh
src/: camera_server.cpp
